# pharmacy-shop

./: .gitignore  anything.anything  class.py  main.py  pharmacy.sqlite  pyproject.toml  tutorial.py
app/: dependencies.py  main.py
app/internal/: admin.py
app/routers/: items.py
app/security/: oauth2.py
examples/: body_field.py  body_nested.py  body_parameter.py  cookies.py  declare_request.py  docstring.py  enum.py  extra_datatype.py  header_parameter.py  main.py  openapi.py  python_type.py  query.py  status.py  task.py
examples/advanceTutorial/: dependencies.py  response.py  responseopenapi.py
examples/database/: cors.py  crud.py  db.py  main.py  middleware.py  models.py  schemas.py
examples/dependencies/: common.py  cors.py  dependencies.py  global.py  intro.py  middleware.py  path.py  sub.py  yield.py
examples/requeest/: body.py  error.py  error_2.py  errors.py  extra_model.py  files.py  model.py  path.py  status_code.py
examples/routers/: items.py  users.py
examples/security/: jwt.py  main.py  oauth.py
pharmacy/: enums.py  main.py  security.py
pharmacy/database/: __init__.py  core.py
pharmacy/dependencies/: auth.py  database.py  jwt.py  oauth_schemes.py
pharmacy/routers/: inventories.py  users.py
pharmacy/schemas/: cart_items.py  inventories.py  orders.py
pharmacy_shop/: security.py
pharmacy_shop/database/: core.py
pharmacy_shop/dependencies/: auth.py  database.py  jwt.py  oauth_schemes.py
pharmacy_shop/schema/: admin.py  inventories.py  token.py  users.py
routers/: admins.py  inventories.py  users.py
(+10 files in other folders)
